docs: add v2026.04.30-micronaut5-snapshot release notes
Document the upgrade to Micronaut 5.0.0-SNAPSHOT (parent BOM and
micronaut.version), the addition of the Sonatype Central Snapshots
repository, the temporary relaxation of the SNAPSHOT enforcer rule, and
the micronaut-maven-plugin configurationValidation override that
ignores the annotation-processor argument 'micronaut.processing.*'
under Micronaut 5's stricter validator. Verified mvn clean package and
the full 829-test suite on Java 26 (Oracle 26.0.1).